test/files/neg/bug910.check
bug910.scala:4: error: type mismatch;
 found   : scala.Seq[scala.Char]
 required: scala.Seq[scala.Int]
    val y: Seq[int] = rest
                      ^
one error found
